--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-click
-good
+click~=8.1.3
+good~=0.0.8
 imageio<=2.4.1
-matplotlib
+matplotlib~=3.4.2
 moviepy<1.0.0
-numpy
-opencv-python
-pims
-pyquaternion
-pyyaml
-recordclass
+numpy~=1.21.1
+opencv-python~=4.6.0.66
+pims~=0.6.1
+pyquaternion~=0.9.9
+pyyaml~=6.0
+recordclass~=0.17.5
 scikit-image
-scikit-learn
+scikit-learn~=1.0.1
 scipy
-sortednp
-transforms3d
+sortednp~=0.4.0
+transforms3d~=0.4.1
 
 # for windows if you get a GLUT error in render.py
 # download .whl for your python from here
@@ -21,3 +21,6 @@ transforms3d
 # and install it
 # python -m pip install PyOpenGL-3.1.6-cp${YOUR_PYTHON_VERSION}-win_amd64.whl --force-reinstall
 PyOpenGL
+
+Pillow~=9.0.1
+sklearn~=0.0
